--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>La Central... - Inicio</title>
-    <link rel="stylesheet" type="text/css" href="Enlaces/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="Enlaces/productos.html">Productos</a></li>
-                <li><a href="Enlaces/contacto.html">Contacto</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
                 <a href="#" onclick="history.go(-1);" class="btn-volver"><i class="fas fa-arrow-left"></i></a>
             </ul>
         </nav>
@@ -22,9 +22,11 @@
 
     <main>
         <section id="banner">
-            <h2>Bienvenido a nuestra tienda en línea</h2>
-            <p>Encuentra las últimas tendencias en moda y accesorios</p>
-            <a href="Enlaces/productos.html" class="btn">Explorar</a>
+            <div class="banner-content">
+                <h2>Bienvenido a nuestra tienda en línea</h2>
+                <p>Encuentra las últimas tendencias en moda y accesorios</p>
+                <a href="productos.html" class="btn">Explorar</a>
+            </div>
         </section>
 
         <!-- <section id="destacados">4
