--- a/productos.html
+++ b/productos.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <title>La Central... - Inicio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Productos Actuales</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -19,25 +21,17 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <section id="banner">
-            <div class="banner-content">
-                <h2>Bienvenido a nuestra tienda en línea</h2>
-                <p>Encuentra las últimas tendencias en moda y accesorios</p>
-                <a href="productos.html" class="btn">Explorar</a>
-            </div>
-        </section>
-
-        <!-- <section id="destacados">4
-            Aqui pondre mas adelante los productos destacados o mas vendidos
-            <h2>Productos destacados</h2> 
-        </section> -->
+        <h2>Todos nuestros productos</h2>
+        <div id="productos">
+            <!-- Aquí se generarán dinámicamente los productos -->
+        </div>
     </main>
-
     <footer>
         <p>Derechos de autor &copy; 2024 La Central. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="productos.js"></script>
 </body>
 
 </html>
